Add webhook integration for user sync and implement RecentAppointments component

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,16 @@ yarn-error.log*
 next-env.d.ts
 
 /src/generated/prisma
+
+# Webhook documentation (local reference)
+README_WEBHOOKS.md
+WEBHOOK_INDEX.md
+WEBHOOK_IMPLEMENTATION_STEPS.md
+WEBHOOK_CODE_EXAMPLES.md
+WEBHOOK_COMPLETE_GUIDE.md
+WEBHOOK_QUICK_REFERENCE.md
+WEBHOOK_VISUAL_GUIDE.md
+WEBHOOK_SETUP.md
+WEBHOOK_SUMMARY.md
+WEBHOOK_CHECKLIST.md
+WEBHOOK_USAGE_MAP.md
