--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "recharts": "^2.15.4",
     "resend": "^6.1.0",
     "sonner": "^2.0.7",
+    "svix": "^1.81.0",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
     "zod": "^4.1.12"
