Refactor booking flow with Zustand, update architecture, and enhance admin access logic

--- a/.gitignore
+++ b/.gitignore
@@ -48,9 +48,19 @@ WEBHOOK_INDEX.md
 WEBHOOK_IMPLEMENTATION_STEPS.md
 WEBHOOK_CODE_EXAMPLES.md
 WEBHOOK_COMPLETE_GUIDE.md
+
+# Admin authentication documentation (local reference)
+ADMIN_INDEX.md
+ADMIN_COMPLETE_SUMMARY.md
+ADMIN_STEP_BY_STEP.md
+ADMIN_QUICK_REFERENCE.md
+ADMIN_SETUP_GUIDE.md
+ADMIN_VISUAL_GUIDE.md
+ADMIN_IMPLEMENTATION.md
 WEBHOOK_QUICK_REFERENCE.md
 WEBHOOK_VISUAL_GUIDE.md
 WEBHOOK_SETUP.md
 WEBHOOK_SUMMARY.md
 WEBHOOK_CHECKLIST.md
 WEBHOOK_USAGE_MAP.md
+PROJECT_AUDIT_SUMMARY.md
